--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ google_site_verification: iLcn0SOTj8DwWZ4p_P_h3J_lxE8i1ZikWIx4lthZuCY
 
 #SEO
 title: Francis Borja
-description: My name is Francis. I like to write and design stuff.
+description: Hello. My name is Francis. This is my blog.
 logo: /assets/logomark-color.png
 
 #Social
