--- a/_config.yml
+++ b/_config.yml
@@ -47,73 +47,51 @@ sass:
 
 
 
-gems:
+plugins:
+- jekyll
 - activesupport
-- addressable
-- bundler
-- bundler-unload
-- coffee-script
-- coffee-script-source
-- concurrent-ruby
-- executable-hooks
-- fastercsv
-- gem-wrappers
-- github-pages
 - github-pages-health-check
 - html-pipeline
-- io-console
-- jekyll
 - jekyll-avatar
 - jekyll-coffeescript
 - jekyll-default-layout
 - jekyll-feed
 - jekyll-gist
 - jekyll-github-metadata
-- jekyll-import
 - jekyll-mentions
 - jekyll-optional-front-matter
 - jekyll-paginate
 - jekyll-readme-index
 - jekyll-redirect-from
 - jekyll-relative-links
-- jekyll-sass
 - jekyll-sass-converter
 - jekyll-seo-tag
 - jekyll-sitemap
 - jekyll-swiss
+- jekyll-theme-architect
+- jekyll-theme-cayman
+- jekyll-theme-dinky
+- jekyll-theme-hacker
+- jekyll-theme-leap-day
+- jekyll-theme-merlot
+- jekyll-theme-midnight
+- jekyll-theme-minimal
+- jekyll-theme-modernist
+- jekyll-theme-primer
+- jekyll-theme-slate
+- jekyll-theme-tactile
+- jekyll-theme-time-machine
 - jekyll-titles-from-headings
-- jekyll-watch
-- json
+- jemoji
 - kramdown
 - liquid
 - listen
-- mercenary
-- mini_portile2
 - minima
-- minitest
-- multipart-post
-- net-dns
-- net-telnet
 - nokogiri
-- octokit
-- openssl
-- paginate
-- pathutil
-- public_suffix
-- rake
-- rails
-- rb-fsevent
-- rb-inotify
-- rdoc
 - rouge
-- ruby_dep
-- rubygems-bundler
-- rubygems-update
-- rvm
+- ruby
 - safe_yaml
 - sass
-- sawyer
-- terminal-table
-- test-unit
-- thread_safe
-- unicode-display_width
+- sassc
+- guard-livereload
+- guard-jekyll
