Mastodon social links

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ include: ["_pages"]
 
 # seo
 title: Francis Borja
-description: Hello. My name is Francis and Francis means freedom. Welcome to my blog. I hope you become friends with the voices in my head. 
+description: Hello. My name is Francis and Francis means freedom. Welcome to my blog. I hope you become friends with the voices in my head.
 logo: /assets/logomark-color.png
 
 # social
@@ -19,6 +19,13 @@ social:
 
 url: https://francisborja.com
 enforce_ssl: francisborja.com
+
+minima:
+  social_links:
+    twitter: freeingfrancis
+    mastodon:
+      - username: francisborja
+        instance: home.social
 
 # post defaults
 defaults:
